--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -35,3 +35,8 @@
   font-size: 20px !important;
   margin-left: 8px;
 }
+@media (max-width: 1024px) {
+  .navbar_wrapper {
+    display: none;
+  }
+}
